<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">


    <androidx.cardview.widget.CardView
        app:cardElevation="10dp"
        app:cardCornerRadius="25dp"
        app:cardBackgroundColor="@color/colour_green3"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        >


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView_product"
                android:layout_width="150dp"
                android:layout_height="125dp"
                android:layout_gravity="center"
                android:layout_margin="7dp"
                android:contentDescription="@string/todo"
                android:src="@drawable/test_pic1" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center">

                <TextView
                    android:id="@+id/textView_name_product"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/test_product"
                    android:textColor="@color/colour_black"
                    android:textSize="30sp"
                    android:layout_margin="5dp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/shop"
                        android:textColor="@color/colour_black"
                        android:textSize="20sp"/>

                    <TextView
                        android:id="@+id/textView_shop_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/test_shop"
                        android:textColor="@color/colour_black"
                        android:textSize="20sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView8"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/number"
                        android:textAlignment="center"
                        android:textColor="@color/colour_black"
                        tools:ignore="NestedWeights" />

                    <TextView
                        android:id="@+id/textView_num_of_product"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/test_num"
                        android:textAlignment="center"
                        android:textSize="20sp"
                        android:textColor="@color/colour_green4"
                        android:textStyle="bold" />

                </LinearLayout>

            </LinearLayout>
        </LinearLayout>

    </androidx.cardview.widget.CardView>
</LinearLayout>