<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Profile_seller"
    android:id="@+id/profile_seller"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ReadData_seller"
        android:layout_gravity="center"
        android:background="@color/colour_brown1"
        >


        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="15dp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/shop"
                        android:textColor="@color/colour_black"


                        android:textSize="50sp" />

                    <TextView
                        android:id="@+id/textView_shop_name_profile"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/test_shop"
                        android:textColor="@color/colour_green4"
                        android:textSize="50sp"

                        android:textStyle="bold" />
                </LinearLayout>

                <ImageView
                    android:id="@+id/imageView_shop_profile"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:contentDescription="@string/todo"
                    android:src="@drawable/test_pic1" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="10dp"
                    android:orientation="horizontal"

                    >

                    <TextView
                        android:id="@+id/textView12"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="10dp"
                        android:text="@string/shop_description"

                        android:textColor="@color/colour_black"
                        android:textSize="25sp"

                        />

                    <TextView
                        android:id="@+id/textView13"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:text="@string/test_describtion"
                        android:textColor="@color/colour_green4"
                        android:textSize="20sp"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_margin="10dp"
                    android:orientation="horizontal"

                    >

                    <TextView
                        android:id="@+id/textView14"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="10dp"
                        android:text="@string/address_shop"
                        android:textColor="@color/colour_black"
                        android:textSize="25sp" />

                    <TextView
                        android:id="@+id/textView15"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:text="@string/test_address"
                        android:textColor="@color/colour_green4"
                        android:textSize="20sp"

                        android:textStyle="bold"

                        />
                </LinearLayout>

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="15dp"
                    android:src="@drawable/terst_picmap" />

                <Button
                    android:id="@+id/button_edit_profile_seller"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/edit"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:background="@drawable/button_user_status"
                    android:textStyle="bold"
                    android:textColor="@color/colour_black"
                    android:layout_margin="20dp"
                    android:layout_marginBottom="20dp"
                    android:textSize="30sp"

                    />

            </LinearLayout>
        </ScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>