<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Detail_data_seller_Activity"
    android:background="@color/white">

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingBackToProductButton_seller"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:clickable="true"
        android:contextClickable="true"
        android:focusable="true"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:maxImageSize="50dp"
        app:srcCompat="@drawable/ic_back_arrow_foreground"
        tools:ignore="MissingConstraints"
        android:contentDescription="@string/todo" />


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:orientation="vertical"
            android:weightSum="100"
            >

            <ImageView
                android:id="@+id/imageView_detail_product_seller"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="70"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/test_pic1"
                android:contentDescription="@string/todo" />



            <EditText
                android:id="@+id/textView_name_detail_product_seller"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/test_product"
                android:textColor="@color/colour_brown3"
                android:textSize="50sp"
                android:layout_marginVertical="10dp"
                android:layout_marginHorizontal="10dp"
                android:textStyle="bold"
                android:inputType="textShortMessage"
                android:autofillHints="name"
                tools:ignore="LabelFor" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_marginVertical="20dp"
                android:layout_marginHorizontal="10dp"
                >

                <TextView
                    android:id="@+id/textView11"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/shop"
                    android:textColor="@color/colour_black"
                    android:textSize="40sp"

                    />

                <TextView
                    android:id="@+id/textView__shopname_detail_product_seller"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_weight="1"
                    android:text="@string/test_shop"
                    android:textColor="@color/colour_green4"
                    android:textSize="40sp"
                    android:textStyle="bold" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_marginVertical="20dp"
                android:layout_marginHorizontal="10dp"
                >

                <TextView
                    android:id="@+id/textView112"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/number"
                    android:textColor="@color/colour_black"
                    android:textSize="40sp"

                    />

                <EditText
                    android:id="@+id/textView_num_detail_product_seller"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/test_num"
                    android:textColor="@color/colour_green4"
                    android:textStyle="bold"
                    android:textSize="40sp"
                    android:hint="@string/pleasrenternumofproduct"
                    android:layout_marginStart="10dp"
                    android:autofillHints="number"
                    android:inputType="number" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_marginVertical="20dp"
                android:layout_marginHorizontal="10dp"
                >

                <TextView
                    android:id="@+id/textView1125"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/address_shop"
                    android:textColor="@color/colour_black"
                    android:textSize="30sp"

                    />

                <TextView
                    android:id="@+id/textView_address_detail_product_seller"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/test_address"
                    android:textColor="@color/colour_green4"
                    android:textStyle="bold"
                    android:textSize="30sp"
                    android:layout_marginStart="10dp"
                    />
            </LinearLayout>

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginHorizontal="15dp"
                app:srcCompat="@drawable/terst_picmap"
                android:contentDescription="@string/todo" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <Button
                    android:id="@+id/button_confirm_edit_product_data_seller"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:layout_margin="15dp"
                    android:background="@drawable/button_user_status"
                    android:gravity="center"
                    android:text="@string/confirm"
                    android:textColor="@color/colour_black"
                    android:textSize="40sp"
                    android:textStyle="bold"

                    />

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />
            </LinearLayout>


        </LinearLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>